# folder-browser

./: .gitignore  .qmlls.ini  Cargo.toml  README.md  build.rs  collect_feature_snapshot_b64.sh  collect_source_snapshot.sh  folder-browser-current-src.txt  folder-browser-feature-src-b64.txt
backup/: Summarize-command.txt  error-message.txt  paste-ready-continuation-2026-06-30.txt
qml/: ColorConfigDialog.qml  FileIcon.qml  FileListView.qml  HeaderCell.qml  PathBar.qml  RowDelegate.qml  StatusBar.qml  main.qml
src/: controller_accessors.rs  cxxqt_object.rs  database_browser.rs  dir_size_worker.rs  file_is_dir.rs  file_modified_secs.rs  file_path.rs  file_row.rs  file_size_bytes.rs  file_size_status.rs  file_size_text.rs  formatting.rs  main.rs  media_metadata.rs  native_file_model.cpp  native_file_model.h  row.rs  scanner.rs  signals.rs  tree_count_worker.rs
